--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,13 +14,14 @@
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "file-saver": "^2.0.5",
-    "firebase": "^11.1.0",
+    "firebase": "^11.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.4.0",
     "react-json-to-excel": "^1.0.8",
     "react-router": "^6.28.1",
+    "react-router-dom": "^6.28.2",
     "recharts": "^2.15.0",
     "sonner": "^1.7.2",
     "uuid": "^11.0.5",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@hookform/resolvers": "^3.10.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
